# backup-rs

./: .gitignore  Cargo.toml  README.md
docs/: README_JA.md
src/: backup.rs  main.rs
