[package]
name = "backup"
version = "0.3.0"
authors = ["shirokuro <46kuro212@gmail.com>"]
edition = "2018"

[dependencies]
tar = "0.4"
toml = "0.4"
chrono = "0.4"
log = "0.4"
env_logger = "0.6"
serde = "1"
serde_derive = "1"
dunce = "0.1"
colored = "1"
console = "0.7"
# This repository supports windows
# Waiting this: https://gitlab.redox-os.org/redox-os/termion/merge_requests/151
termion = {git = "https://gitlab.redox-os.org/Jezza/termion",branch = "windows-support"}